# rag_api

./: .gitignore  README.md  llama_index_quickstart.ipynb  pyproject.toml
rag_api/: app.py  config.yml
rag_api/utils/: indexer.py  model.py  retriever.py
