[tool.poetry]
name = "rag-api"
version = "0.1.0"
description = "a basic rag api"
authors = ["nkap360 <39144511+nkap360@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
llama-index = "^0.10.5"
qdrant-client = "^1.7.0"
transformers = "^4.36.2"
torch = "^2.1.2"
python-multipart = "^0.0.5"
uvicorn = "^0.17.0"
fastai = "^2.5.0"
sentence-transformers = "^2.1.0"
langchain = "^0.1.7"
llama-index-embeddings-langchain
llama-index-vector-stores-qdrant
llama-index-llms-ollama
aiofiles
fastapi

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
